syntax = "proto3";

import "google/protobuf/empty.proto";
package com.tinkoff;

option java_package = "com.tinkoff.proto";
option java_multiple_files = true;

service StatusService {
  rpc getVersion(google.protobuf.Empty) returns (VersionResponse);
  rpc getReadiness(google.protobuf.Empty) returns (ReadinessResponse);
}

message VersionResponse {
  string artifact = 1;
  string name = 2;
  string group = 3;
  string version = 4;
}

message ReadinessResponse {
  string status = 1;
}